changed application name font

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -30,3 +30,9 @@ body {
   box-shadow: 10px 10px 5px #728387;
   margin-bottom: 30px;
 }
+
+.navbar-inverse .navbar-brand {
+  color: #E3F5A8;
+  font-family: 'francois_oneregular', sans-serif;
+  font-size: 26px;
+}
