added form for submitting new places

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -36,3 +36,9 @@ body {
   font-family: 'francois_oneregular', sans-serif;
   font-size: 26px;
 }
+
+.pagination {
+  color: #E3F5A8;
+  font-family: 'francois_oneregular', sans-serif;
+  font-size: 15px;
+}
