validation place name

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -43,3 +43,10 @@ body {
   font-family: 'francois_oneregular', sans-serif;
   font-size: 15px;
 }
+
+.help-block {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px;
+}
