photo uploader and form

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -59,6 +59,14 @@ body {
   clear: both;
 }
 
+.row {
+  padding: 10px
+}
+
+#my_photo_modal {
+  border: none
+}
+
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
