--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -33,18 +33,67 @@
 
 <br />
 
-  <div class="float-right">
+  <div class="float-right" id="edit_destroy">
     <% if current_user && current_user == @place.user %>
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
       <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
     <% end %>
     
   </div>
+  <div class="clear"></div>
+  <br />
+<!-- Modal -->
+<div class="modal fade" id="my_photo_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Add a photo</h4>
+      </div>
+      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+        <div class="modal-body">
+          <%= f.input :picture %>
+          <%= f.input :caption %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<div>
+  <h1 class="float-left">Photos</h1>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#my_photo_modal">
+    Add a photo
+  </button>
+</div>
+
+<div class="clear"></div>
+
+<div class="row">
+<% @place.photos.each do |photo| %>
+  <div class="col-12 col-sm-6">
+    <!--div-->
+      <!--blockquote-->
+        <%= image_tag photo.picture %>
+        <%= photo.caption %>
+      <!--/blockquote-->
+    <!--/div-->
+  </div>
+<% end %>
+</div>
 </div>
 <div class = "clear"></div>
+<br />
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="my_comment_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -69,7 +118,7 @@
 <div class="col-10 offset-1">
   <h1 class="float-left">Comments</h1>
   <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+  <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#my_comment_modal">
     Add a comment
   </button>
 </div>
@@ -88,3 +137,7 @@
   </div>
 <% end %>
 </div>
+<div class="clear"></div>
+
+
+
