--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,5 +1,10 @@
 <% @places.each do |place| %>
   <div class="booyah-box col-10 offset-1">
+
+    <% if place.photos.present? %>
+      <%= image_tag place.photos.last.picture %>
+    <% end %>
+
     <h1><%= link_to place.name, place_path(place) %></h1><br />
     <i><%= place.address %></i><br /><br />
     <p><%= place.description %></p><br />
@@ -20,6 +25,8 @@
           </blockquote>
         </div>
     <% end %>
+
+    
   </div>    
 <% end %>
 
