--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,17 +1,20 @@
 <% @places.each do |place| %>
   <div class="booyah-box col-10 offset-1">
+    <div class="info">
+      <h1><%= link_to place.name, place_path(place) %></h1><br />
+      <i><%= place.address %></i><br /><br />
+      <p><%= place.description %></p><br />
 
-    <% if place.photos.present? %>
-      <%= image_tag place.photos.last.picture %>
-    <% end %>
-
-    <h1><%= link_to place.name, place_path(place) %></h1><br />
-    <i><%= place.address %></i><br /><br />
-    <p><%= place.description %></p><br />
-
-    <% if place.user.present? %>
-      <small><%= place.user.email %></small>
-    <% end %>
+      <% if place.user.present? %>
+        <small><%= place.user.email %></small>
+      <% end %>
+    
+      <br />
+      <br />
+      <% if place.photos.present? %>
+        <%= image_tag place.photos.last.picture %>
+      <% end %>
+    </div>
   
 
     <% if place.comments.present? %>
