--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -60,7 +60,7 @@ body {
 }
 
 .row {
-  padding: 10px
+  padding: 10px;
 }
 
 #my_photo_modal {
@@ -74,6 +74,7 @@ blockquote {
   padding: 0.5em 10px;
   quotes: "\201C""\201D""\2018""\2019";
 }
+
 blockquote:before {
   color: #ccc;
   content: open-quote;
@@ -82,6 +83,11 @@ blockquote:before {
   margin-right: 0.25em;
   vertical-align: -0.4em;
 }
+
 blockquote p {
   display: inline;
+}
+
+img {
+  max-width: 350px;
 }
