--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -29,7 +29,7 @@ body {
 .navbar {
   background: image_url('grey_wash_wall.png');
   box-shadow: 10px 10px 5px #728387;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 
 .navbar-inverse .navbar-brand {
@@ -90,4 +90,26 @@ blockquote p {
 
 img {
   max-width: 350px;
+}
+
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  width: 100%;
+  max-height: 550px;
+  overflow: auto;
+  transform: scale(1);
+}
+
+.carousel-caption {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 50px;
+  font-weight: 100;
+  text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
