--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,27 +7,27 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <%= image_tag 'slider1.jpg', class:'d-block img-fluid' %>
+      <%= image_tag 'slider1.jpg', class:'img-fluid' %>
       <div class="carousel-caption d-none d-md-block"
         <h3>Find the best ice cream in town</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag 'slider2.jpg', class:'d-block img-fluid' %>
+      <%= image_tag 'slider2.jpg', class:'img-fluid' %>
       <div class="carousel-caption d-none d-md-block"
         <h3>Try dishes you can't find anywhere else</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag 'slider3.jpg', class:'d-block img-fluid' %>
+      <%= image_tag 'slider3.jpg', class:'img-fluid' %>
       <div class="carousel-caption d-none d-md-block"
-        <h3>Have an elegant experience at Eleven</h3>
+        <h3>Have an elegant experience</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag 'slider4.jpg', class:'d-block img-fluid' %>
+      <%= image_tag 'slider4.jpg', class:'img-fluid' %>
       <div class="carousel-caption d-none d-md-block"
-        <h3>Have an elegant experience at Eleven</h3>
+        <h3>Let your taste buds explore</h3>
       </div>
     </div>
   </div>
