--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -92,9 +92,15 @@ img {
   max-width: 350px;
 }
 
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev {
+  display: block;
+ } 
+
 .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
   width: 100%;
-  max-height: 550px;
+  height: auto;
   overflow: auto;
   transform: scale(1);
 }
